# OOP_project2

./: CMakeLists.txt  ColorFilters.cpp  ColorFilters.h  Command.h  DetailFilters.cpp  DetailFilters.h  Exceptions.cpp  Exceptions.h  FilterFactory.cpp  FilterFactory.h  Image.cpp  Image.h  ImageEditor.cpp  ImageEditor.h  Menu.cpp  Menu.h  Observer.h  Presets.cpp  Presets.h  README.md  SizeFilters.cpp  SizeFilters.h  State.h  main.cpp
.github/workflows/: cmake.yml
